affect vs effect... still not sure i have it right

--- a/qtalk3/index.html
+++ b/qtalk3/index.html
@@ -288,7 +288,7 @@
         <li>Measurement causes the system to collapse to a single state.</li>
         <li>The larger the blue disk, the more likely the system will collapse to that state.</li>
     </ul>
-    <p><b>Important:</b> Phases do not directly effect the outcome of measurements. i.e. measurements are not affected by arrow directions.</p>
+    <p><b>Important:</b> Phases do not directly affect the outcome of measurements. i.e. measurements are not affected by arrow directions.</p>
     <div class="animationBlock">
         <div class="animationBlock_buttons">
             <div>
