--- a/qtalk3/part2.html
+++ b/qtalk3/part2.html
@@ -25,10 +25,12 @@
     as we start dealing with multiple qubits.
 </p>
 <p>The blue disks introduced in Part 1 do <em>not</em> correspond to single qubits.</p>
-<p><b>Each blue disk corresponds to a distinct state of the entire quantum system.</b></p>
 <p>
+    <b>Each blue disk corresponds to a distinct state of the entire quantum system.</b>
+    <span class="help">
     The blue disks are technically called state &ldquo;amplitudes&rdquo;
     and are represented mathematically using complex numbers.
+    </span>
 </p>
 </section>
 
@@ -93,7 +95,7 @@
     </div>
     <p>
         Note that, if you were to measure the qubits while they are in this state,
-        you will find that they are either both 0 or both 1.
+        you would find that they are either both 0 or both 1.
     </p>
     <p>
         To really appreciate quantum entanglement,
@@ -152,7 +154,7 @@
     This will become important later.
 </p>
 <p>
-    Given that 45&deg; is half of a 90&deg;,
+    Given that 45&deg; is half of 90&deg;,
     and given that a 90&deg; rotation of a 0 state
     results in a state with a 50% chance of 0 and 50% chance of 1,
     you might have expected a 45&deg; rotation to take you half way:
