Working on article

--- a/qtalk3/index.html
+++ b/qtalk3/index.html
@@ -91,7 +91,8 @@
     </p>
     <p>For example, performing a NOT operation on the right most bit of the binary number 111
     <b>flips the target bit</b> and results in 110.</p>
-    <p>In what follows, it will be convenient to represent the state of a system by listing all possible states and placing a blue disk next to the current state.</p>
+    <p>In what follows, it will be convenient to represent the state of a system by listing all possible states
+        and placing a blue disk next to the current state.</p>
     <p>
         Click the button labelled &ldquo;<em>Not bit<sub>a</sub>&rdquo;</em>
         to apply the NOT operation to the left bit,
@@ -184,7 +185,7 @@
         Of course
         <b>in reality it is in only one of those states</b>.
         We just don't know which one.
-        Strangely, this is an assumpution about reality that we will need to reconsider
+        Strangely, this is an assumption about reality that we will need to reconsider
         later in this article.
     </p>
     <p>
@@ -199,7 +200,7 @@
     </p>
     <p>
         In quantum computing,
-        the word <em>meausurement</em> refers to this act of peeking.
+        the word <em>measurement</em> refers to this act of peeking.
     </p>
     <p>
         Press the &ldquo;Random NOT&rdquo; button multiple times
@@ -326,7 +327,7 @@
 
 
 <section>
-<h1>Measurement Revisted</h1>
+<h1>Measurement Revisited</h1>
     <p>Recall:</p>
     <ul>
         <li>Measurement causes the system to collapse to a single state.</li>
@@ -336,7 +337,8 @@
             it will remain in that state until another operation is performed.
         </li>
     </ul>
-    <p><b>Important:</b> Phases do not directly affect the outcome of measurements. i.e. measurements are not affected by arrow directions.</p>
+    <p><b>Important:</b> Phases do not directly affect the outcome of measurements.
+        I.e. measurements are not affected by arrow directions.</p>
     <div class="animationBlock">
         <div class="animationBlock_buttons">
             <div>
@@ -425,7 +427,7 @@
         <span class="help">
             For the maths to work,
             the arrow lengths now have to represent
-            the square root of the probabilty.
+            the square root of the probability.
             We will briefly cover this in more detail in part 2.
         </span>
     </p>
