--- a/qtalk3/part2.html
+++ b/qtalk3/part2.html
@@ -108,7 +108,7 @@
 <section>
 <h1>Y Rotations</h1>
 <p>
-    There are three particlar single qubit operators commonly referred to
+    There are three particular single qubit operators commonly referred to
     as the X, Y, and Z Rotation operators.
     Historically, these refer to physical rotations in
     three dimensional space around the X, Y, and Z axes.
