Fix a few issues found by the w3c html validator.

--- a/qtalk3/index.html
+++ b/qtalk3/index.html
@@ -9,7 +9,7 @@
 <body>
 <section>
     <h1>An Interactive Introduction To Quantum Computing</h1>
-    <img src="animated-qubits.png" class="titleImage" />
+    <img src="animated-qubits.png" class="titleImage" alt="qubit animation"/>
     <div class="subtitle">
         Or <em>What Do You Mean They Can Be Both Zero And One At The Same Time!</em>
     </div>
@@ -146,7 +146,7 @@
         </li>
     </ul>
     <p>And so the final state will be 0 with a probability of 49% + 9% = 58%</p>
-    <img src="classicalRandomNot.png" width="80%"/>
+    <img src="classicalRandomNot.png" class="largeImage" alt="Probability tree for random NOT"/>
 </section>    
 <section>
     <h1>Random NOT (your turn)</h1>
@@ -281,7 +281,7 @@
 
 <section>
 <h1>Huh?</h1>
-<img src="confusedCat.jpg" width="50%"/>
+<img src="confusedCat.jpg" class="mediumImage" alt="Photograph of confused cat"/>
 </section>
 
 <section>
@@ -291,14 +291,17 @@
     You should be if this is all new to you. 
     Please hang in there for a while longer.
 </p>
+    
 <p>
     The arrow directions represent what physicists call <em>phase</em>:
-    <ul>
-        <li>it is an abstract concept of quantum mechanics.</li>
-        <li>it has no &ldquo;common sense&rdquo; interpretation.</li>
-        <li>it can <b>only be measured indirectly</b>.</li>
-    </ul>
 </p>
+
+<ul>
+    <li>it is an abstract concept of quantum mechanics.</li>
+    <li>it has no &ldquo;common sense&rdquo; interpretation.</li>
+    <li>it can <b>only be measured indirectly</b>.</li>
+</ul>
+
 <p>
     In the case of nuclear spin,
     phases can be manipulated by applying electric and/or
